--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <i class="fa-regular fa-pen-to-square"></i>
                 <h4>Notes</h4>
             </div>
-            <button id="creat-note" class="creat-note">Creat Note</button>
+            <button id="creat-note" class="creat-note">Create Note</button>
         </header>
         <div id="main" class="main">
             
